--- a/index.html
+++ b/index.html
@@ -74,112 +74,237 @@
           </div>
         </div>
       </nav>
-
-      <!-- carousel section -->
-      <div
-        id="carouselExampleCaptions"
-        class="carousel slide container"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col-lg-7"></div>
-              <div class="col-lg-5">
-                <img
-                  src="images/banner-images/headphone.png"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-7"></div>
-              <div class="col-lg-5">
-                <img
-                  src="images/banner-images/xbox.png"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide. We
-                used to group here .
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-7"></div>
-              <div class="col-lg-5">
-                <img
-                  src="images/banner-images/tv.png"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
     </header>
+    <!-- carousel section -->
+    <div
+      id="carouselExampleCaptions"
+      class="carousel slide container"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner rounded-3 mt-2">
+        <div class="carousel-item active bg-secondary p-5">
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <h1>Cool Dude Headphone</h1>
+              <p>
+                This is the best headphone in the world for people who just want
+                to waste time in front of funky world.
+              </p>
+              <h1>$520</h1>
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+            <div class="col-lg-5">
+              <img
+                src="images/banner-images/headphone.png"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item bg-secondary p-5">
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <h1>Cool Dude Headphone</h1>
+              <p>
+                This is the best headphone in the world for people who just want
+                to waste time in front of funky world.
+              </p>
+              <h1>$520</h1>
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+            <div class="col-lg-5">
+              <img
+                src="images/banner-images/xbox.png"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item bg-secondary p-5">
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <h1>Cool Dude Headphone</h1>
+              <p>
+                This is the best headphone in the world for people who just want
+                to waste time in front of funky world.
+              </p>
+              <h1>$520</h1>
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+            <div class="col-lg-5">
+              <img
+                src="images/banner-images/tv.png"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <!-- Catagories Section -->
+    <div class="container mt-5">
+      <div class="row g-5">
+        <div class="col-lg-4 col-sm-12">
+          <div
+            class="
+              p-3
+              border
+              bg-warning
+              d-flex
+              align-items-center
+              justify-content-between
+              text-white
+              rounded-3
+            "
+          >
+            <h1>Bag</h1>
+            <img
+              src="images/categories/bag.png"
+              alt=""
+              style="width: 100px; height: 100px"
+            />
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <div
+            class="
+              p-3
+              border
+              bg-success
+              d-flex
+              align-items-center
+              justify-content-between
+              text-white
+              rounded-3
+            "
+          >
+            <h1>Watch</h1>
+            <img
+              src="images/categories/watch.png"
+              alt=""
+              style="width: 100px; height: 100px"
+            />
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <div
+            class="
+              p-3
+              border
+              bg-primary
+              d-flex
+              align-items-center
+              justify-content-between
+              text-white
+              rounded-3
+            "
+          >
+            <h1>Shoes</h1>
+            <img
+              src="images/categories/shoes.png"
+              alt=""
+              style="width: 100px; height: 100px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Shoes Section -->
+    <section class="container mt-5">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This card has supporting text below as a natural lead-in to
+                additional content.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This card has even longer content
+                than the first to show that equal height action.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Javascript link -->
     <script
