Bag section Added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 This is the best headphone in the world for people who just want
                 to waste time in front of funky world.
               </p>
-              <h1>$520</h1>
+              <h1 class="text-white">$520</h1>
               <div class="btn btn-warning">Buy Now</div>
             </div>
             <div class="col-lg-5">
@@ -132,7 +132,7 @@
                 This is the best headphone in the world for people who just want
                 to waste time in front of funky world.
               </p>
-              <h1>$520</h1>
+              <h1 class="text-white">$520</h1>
               <div class="btn btn-warning">Buy Now</div>
             </div>
             <div class="col-lg-5">
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item bg-secondary p-5">
+        <div class="carousel-item p-5" style="background-color: #feeae9">
           <div class="row align-items-center">
             <div class="col-lg-7">
               <h1>Cool Dude Headphone</h1>
@@ -187,11 +187,12 @@
 
     <!-- Catagories Section -->
     <div class="container mt-5">
-      <div class="row g-5">
+      <div class="row g-4">
         <div class="col-lg-4 col-sm-12">
           <div
             class="
-              p-3
+              px-5
+              py-2
               border
               bg-warning
               d-flex
@@ -212,7 +213,8 @@
         <div class="col-lg-4 col-sm-12">
           <div
             class="
-              p-3
+              px-5
+              py-2
               border
               bg-success
               d-flex
@@ -233,7 +235,8 @@
         <div class="col-lg-4 col-sm-12">
           <div
             class="
-              p-3
+              px-5
+              py-2
               border
               bg-primary
               d-flex
@@ -255,52 +258,100 @@
     </div>
     <!-- Shoes Section -->
     <section class="container mt-5">
+      <h3>Shoes</h3>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card h-100">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">yeezy 350</h5>
+              <p class="card-text">
+                This is a wider card with text below as a natural lead-in to
+                additional content.
+              </p>
+              <h3 class="card-title text-danger">$300</h3>
+              <div class="btn w-50 mt-4 btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Nike Air</h5>
+              <p class="card-text">
+                This card has supporting text below as a natural lead-in to
+                additional content.
+              </p>
+
+              <h3 class="card-title text-danger">$700</h3>
+              <div class="btn w-50 mt-4 btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Nike Air Max</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content.
+              </p>
+              <h3 class="card-title text-danger">$1200</h3>
+              <div class="btn w-50 mt-4 btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Bag Section -->
+    <section class="container mt-5">
+      <h3>Bags</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
+            <img src="images//bags/bag-1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Red Bag</h5>
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit
                 longer.
               </p>
+              <h3 class="card-title text-danger">$300</h3>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+            <div class="btn w-50 ms-3 mb-3 btn-primary">Buy Now</div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="..." />
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Blue Bag</h5>
               <p class="card-text">
                 This card has supporting text below as a natural lead-in to
                 additional content.
               </p>
+
+              <h3 class="card-title text-danger">$200</h3>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+            <div class="btn w-50 ms-3 mb-3 btn-primary">Buy Now</div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="..." />
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Black Bag</h5>
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
-                lead-in to additional content. This card has even longer content
-                than the first to show that equal height action.
+                lead-in to additional content.
               </p>
+              <h3 class="card-title text-danger">$300</h3>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+            <div class="btn w-50 ms-3 mb-3 btn-primary">Buy Now</div>
           </div>
         </div>
       </div>
