--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         <div class="carousel-item active bg-secondary p-5">
           <div class="row align-items-center">
             <div class="col-lg-7">
-              <h1>Cool Dude Headphone</h1>
+              <h1>Boat XP Headphone</h1>
               <p>
                 This is the best headphone in the world for people who just want
                 to waste time in front of funky world.
               </p>
-              <h1 class="text-white">$520</h1>
+              <h1 class="text-white">$220</h1>
               <div class="btn btn-warning">Buy Now</div>
             </div>
             <div class="col-lg-5">
@@ -121,9 +121,9 @@
         <div class="carousel-item bg-secondary p-5">
           <div class="row align-items-center">
             <div class="col-lg-7">
-              <h1>Cool Dude Headphone</h1>
+              <h1>X BOX</h1>
               <p>
-                This is the best headphone in the world for people who just want
+                This is the best playstation in the world for people who just want
                 to waste time in front of funky world.
               </p>
               <h1 class="text-white">$520</h1>
@@ -141,9 +141,9 @@
         <div class="carousel-item p-5" style="background-color: #feeae9">
           <div class="row align-items-center">
             <div class="col-lg-7">
-              <h1>Cool Dude Headphone</h1>
+              <h1>Smart TV 360</h1>
               <p>
-                This is the best headphone in the world for people who just want
+                This is the best TV in the world for people who just want
                 to waste time in front of funky world.
               </p>
               <h1>$520</h1>
